fix(fxcanvas): degrade to a blank canvas instead of aborting host startup
An unreachable JavaFX killed the host application at startup. Build the
HostContainer lazily and remember the failure, so setScene/paint become
no-ops on a canvas that renders nothing rather than propagating.

Adds -PexcludeFxCanvas, off by default, to leave javafx.embed.swt out of the
fragment entirely for hosts that never use it.

No test yet: reproducing it needs JavaFX internals made unreachable, which
the current harness cannot express.